テーマの処理をSmartyで実行するようにした。他 【１】defaultテーマのdefaultレイアウトでまずは動作するようになった。 【２】HTMLコンテンツのSmarty処理をcaching=falseにした。 【３】readme.txtを更新 【４】$site->get_page_info() でページが見つからない場合に、nullを返すようにした。
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/test/abc.html
+++ b/htdocs/test/abc.html
@@ -2,8 +2,10 @@
 
 <p>test/abc.html のHTMLソースコードです。</p>
 
+<p>このページのタイトルは、<strong>{$page_info.title}</strong> です。</p>
+
+
 <ul>
 	<li><a href="./index.html">./index.html</a></li>
 </ul>
-
 
