PX command "sitemap" を追加, Smartyにコアオブジェクトを assign, 他
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -5,11 +5,19 @@
 <title>{$page_info.title} | Pickles Project 1.x</title>
 </head>
 <body>
+<div class="header">
+	<div><a href="{$site->get_path_home()}">Pickles Project 1.x</a></div>
+</div>
+
 <h1>{$page_info.title_h1}</h1>
 <div id="content" class="contents">
 
 {$content}
 
 </div><!-- /#content -->
+
+<div class="footer">
+	<div></div>
+</div>
 </body>
 </html>
