--- a/htdocs/test/abc.html
+++ b/htdocs/test/abc.html
@@ -9,3 +9,10 @@
 	<li><a href="./index.html">./index.html</a></li>
 </ul>
 
+
+{assign var='assign_test' value='assign_test_value'}
+
+<div>{$assign_test}</div>
+
+<p>{$smarty.server.HTTP_USER_AGENT}</p>
+
