PX command "sitemap_definition" を実装。$site->get_parent() を追加。コンテンツをリクエストされたパスから直接呼んでいた不具合を修正。他
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -17,7 +17,7 @@
 </div><!-- /#content -->
 
 <div class="footer">
-	<div></div>
+	<div>{if $site->get_page_info($req->get_request_file_path(),'id')}[<a href="{$site->get_page_info( $site->get_parent($req->get_request_file_path()), 'path' )}">上の階層へ</a>]{/if}</div>
 </div>
 </body>
 </html>
