--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>{$page_info.title} | Pickles Project 1.x</title>
+<title>{$page_info.title} | {$px->get_conf('project.name')}</title>
 <link rel="stylesheet" href="{$px->get_install_path()}common/css/common.css" type="text/css" />
 </head>
 <body>
 <div class="header">
-	<div><a href="{$px->get_install_path()}">Pickles Project 1.x</a></div>
+	<div><a href="{$px->get_install_path()}">{$px->get_conf('project.name')}</a></div>
 </div>
 
 <h1>{$page_info.title_h1}</h1>
