--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -9,14 +9,34 @@
 <div class="header">
 	<div><a href="{$px->get_install_path()}">{$px->get_conf('project.name')|escape}</a></div>
 </div>
-
+<div class="middle">
 <h1>{$page_info.title_h1|escape}</h1>
 <div id="content" class="contents">
 
 {$content}
 
 </div><!-- /#content -->
-
+<div>
+<ul>
+{foreach from=$site->get_bros() item=local_page_id}
+{assign var='local_page_info' value=$site->get_page_info($local_page_id)}
+<li>{$theme->mk_link($local_page_info['path'])}
+{if $local_page_info['id']==$page_info['id']}
+{assign var='local_children' value=$site->get_children()}
+{if count($local_children)}
+<ul>
+{foreach from=$local_children item=local_child_page_id}
+{assign var='local_child_page_info' value=$site->get_page_info($local_child_page_id)}
+<li>{$theme->mk_link($local_child_page_info['path'])}</li>
+{/foreach}
+</ul>
+{/if}
+{/if}
+</li>
+{/foreach}
+</ul>
+</div>
+</div>
 <div class="footer">
 	<div class="breadcrumb">{$theme->mk_breadcrumb()}</div>
 	{if $site->get_page_info($req->get_request_file_path(),'id')}<div class="center">[{$theme->mk_link($site->get_parent($req->get_request_file_path()),'1つ上の階層へ')}]</div>{/if}
