--- a/htdocs/test/megacontents.html
+++ b/htdocs/test/megacontents.html
@@ -1,7 +1,8 @@
 
 
-<p>test/abc.html のHTMLソースコードです。</p>
+<p>test/megacontents.html のHTMLソースコードです。</p>
 
 <p>このページのタイトルは、<strong>{$page_info.title|escape}</strong> です。</p>
+
 
 
