テーマテンプレートにMETAタグ(keywordsとdescription)を追加した。
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <title>{$page_info.title|escape} | {$px->get_conf('project.name')}</title>
+<meta name="keywords" content="{$page_info.keywords|escape}" />
+<meta name="description" content="{$page_info.description|escape}" />
 {$px->ssi(implode('/',array($px->get_install_path(),'/common/inc/common_setup.inc')))}
 <link rel="stylesheet" href="{$px->get_install_path()}common/css/common.css" type="text/css" />
 </head>
