テーマ領域にコンテンツからソースを送れるようにした。(for #14) - テーマに $contents_cabinet を作成。 - テーマに、キャビネットへの出し入れを行う send_content(), pull_content() を追加。 - Smarty にプラグイン「content」「send_content」を追加。 - 通常のコンテンツのソースを、デフォルトキャビネットに格納するように変更。 - 以上の修正に伴うテンプレートの修正。
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -7,6 +7,7 @@
 <meta name="description" content="{$page_info.description|escape}" />
 {$px->ssi(implode('/',array($px->get_install_path(),'/common/inc/common_setup.inc')))}
 <link rel="stylesheet" href="{$px->get_install_path()}common/css/common.css" type="text/css" />
+{content name="head"}
 </head>
 <body>
 <div class="outline" id="pagetop">
@@ -18,7 +19,7 @@
 <h1>{$page_info.title_h1|escape}</h1>
 <div id="content" class="contents">
 
-{$content}
+{content}
 
 </div><!-- /#content -->
 </div><!-- /.column1 -->
