--- a/htdocs/test/titletest.html
+++ b/htdocs/test/titletest.html
@@ -7,3 +7,11 @@
 </ul>
 
 
+{send_content name="head"}
+<!-- このソースは、テーマのキャビネット "head" に送られます。 -->
+{/send_content}
+
+{send_content name="left"}
+<!-- このソースは、テーマのキャビネット "left" に送られます。(ただし、 left は定義されていないので捨てられる) -->
+{/send_content}
+
