ダイナミックパス機能を実装。 サイトマップのパスに {$xxxx} を含めるとワイルドカード化され、$req->get_path_param('xxxx') で取得できる。
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/test/index.html
+++ b/htdocs/test/index.html
@@ -5,4 +5,6 @@
 	<li><a href="../">トップへ戻る</a></li>
 	<li><a href="./abc.html">./abc.html</a></li>
 	<li><a href="./nopage.html">./nopage.html</a></li>
+	<li><a href="{$px->get_install_path()}test/dynamic/a/b.html">/test/dynamic/a/b.html</a></li>
 </ul>
+
