--- a/htdocs/test/index.html
+++ b/htdocs/test/index.html
@@ -6,5 +6,6 @@
 	<li><a href="./abc.html">./abc.html</a></li>
 	<li><a href="./nopage.html">./nopage.html</a></li>
 	<li><a href="{$px->get_install_path()}test/dynamic/a/b.html">/test/dynamic/a/b.html</a></li>
+	<li><a href="./user_test.html">./user_test.html</a></li>
 </ul>
 
