サイトマップでページ作成してみる。 /test/commandlist.html

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,6 +6,10 @@
 	<li><a href="test/abc.html">./test/abc.html</a></li>
 </ul>
 
+<ul>
+	<li><a href="test/commandlist.html">ピクルスのコマンドリストはこちら</a></li>
+</ul>
+
 
 
 {send_content name="head"}
