いつもの勝手な奴ら
勝手に変わるやつとかよくわからんけど変わるやつとか、あとahoque ahomemo

--- a/htdocs/test/html.html
+++ b/htdocs/test/html.html
@@ -1,17 +1,1 @@
-
-
-<p>test/html.html のHTMLソースコードです。</p>
-
-<p>このページのタイトルは、<strong>{$page_info.title|escape}</strong> です。</p>
-
-<h2>ローカル変数にアサインしてみるテスト</h2>
-
-{assign var='assign_test' value='assign_test_value'}
-
-<div>{$assign_test|escape}</div>
-
-<h2>環境変数を出力してみるテスト</h2>
-
-<ul>
-<li>{$smarty.server.HTTP_USER_AGENT|escape}</li>
-</ul>
+empty contents
