--- a/htdocs/test/megacontents.html
+++ b/htdocs/test/megacontents.html
@@ -1,8 +1,1 @@
-
-
-<p>test/megacontents.html のHTMLソースコードです。</p>
-
-<p>このページのタイトルは、<strong>{$page_info.title|escape}</strong> です。</p>
-
-
-
+empty contents
