--- a/htdocs/test/titletest.html
+++ b/htdocs/test/titletest.html
@@ -1,17 +1,1 @@
-
-<p>
-	このページは制作中です。<br />
-</p>
-<ul>
-	<li><a href="./">./</a></li>
-</ul>
-
-
-{send_content name="head"}
-<!-- このソースは、テーマのキャビネット "head" に送られます。 -->
-{/send_content}
-
-{send_content name="left"}
-<!-- このソースは、テーマのキャビネット "left" に送られます。(ただし、 left は定義されていないので捨てられる) -->
-{/send_content}
-
+empty contents
