--- a/htdocs/test/megacontents.html
+++ b/htdocs/test/megacontents.html
@@ -5,7 +5,27 @@
 
 <p>test/megacontents.html のHTMLソースコードです。</p>
 
+<?php
+	print( $px->theme()->autoindex() );
+?>
+
+<?php for($i = 0; $i<100; $i++){ ?>
+
+<h2>これはテストページ1</h2>
 <p>このページのタイトルは、<strong><?php print t::h( $page_info['title'] ); ?></strong> です。</p>
+<p>長いページを作ってみるテストです。</p>
 
+<h3>これはテストページ2</h3>
+<p>このページのタイトルは、<strong><?php print t::h( $page_info['title'] ); ?></strong> です。</p>
+<p>長いページを作ってみるテストです。</p>
 
+<h3>これはテストページ3</h3>
+<p>このページのタイトルは、<strong><?php print t::h( $page_info['title'] ); ?></strong> です。</p>
+<p>長いページを作ってみるテストです。</p>
+
+<h3>This is a test page. 4</h3>
+<p>このページのタイトルは、<strong><?php print t::h( $page_info['title'] ); ?></strong> です。</p>
+<p>長いページを作ってみるテストです。</p>
+
+<?php } ?>
 
