--- a/htdocs/_PX/themes/sample/default.html
+++ b/htdocs/_PX/themes/sample/default.html
@@ -5,6 +5,7 @@
 <title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
 <meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
 <meta name="description" content="<?php print t::h($page_info['description']); ?>" />
+<script src="<?php print t::h($px->get_install_path()); ?>common/js/jquery-1.7.2.min.js" type="text/javascript"></script>
 <?php
 	print $px->ssi(implode('/',array($px->get_install_path(),'/common/inc/common_setup.inc')));
 ?>
