--- a/htdocs/test/index.html
+++ b/htdocs/test/index.html
@@ -5,7 +5,7 @@
 	<li><a href="../">トップへ戻る</a></li>
 	<li><a href="./abc.html">./abc.html</a></li>
 	<li><a href="./nopage.html">./nopage.html</a></li>
-	<li><a href="<?php print t::h( $px->get_install_path() ); ?>test/dynamic/a/b.html">/test/dynamic/a/b.html</a></li>
+	<li><a href="./dynamic/1/a/b.html">./dynamic/1/a/b.html</a></li>
 	<li><a href="./user_test.html">./user_test.html</a></li>
 </ul>
 
