ユニットモジュール .cols を更新。【FIX】 - .colums から .cols に名称変更。 - その他、属するクラス名の名称変更。 - .cols-pad の要素追加。 - ドキュメント上に反映。 - 合わせて、スタティックモジュール、パーツモジュール、ユニットモジュールの概念を追加。【FIX】

--- a/htdocs/test/megacontents.html
+++ b/htdocs/test/megacontents.html
@@ -10,121 +10,121 @@
 ?>
 
 
-<h2>カラムレイアウト .columns</h2>
+<h2>カラムレイアウト .cols</h2>
 
 <h3>2分割</h3>
-<div class="columns unit">
-	<div class="columns-col columns-1of2">
-		<p>columns には unit を一緒につけます。</p>
-		<p>カラム columns-1of2</p>
+<div class="cols unit">
+	<div class="cols-col cols-w50per"><div class="cols-pad">
+		<p>cols には unit を一緒につけます。</p>
+		<p>カラム cols-w50per</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
-	</div>
-	<div class="columns-col columns-1of2 columns-last">
-		<p>最後のカラムには、<code>.columns-last</code> を併記します。</p>
-		<p>カラム columns-1of2</p>
-		<p>.columns-last は古いIE対策。IE9以降は不要？。</p>
-	</div>
-</div><!-- / .columns -->
+	</div></div>
+	<div class="cols-col cols-w50per cols-last"><div class="cols-pad">
+		<p>最後のカラムには、<code>.cols-last</code> を併記します。</p>
+		<p>カラム cols-w50per</p>
+		<p>.cols-last は古いIE対策。IE9以降は不要？。</p>
+	</div></div>
+</div><!-- / .cols -->
 
 
 <h3>3分割</h3>
-<div class="columns unit">
-	<div class="columns-col columns-1of3">
-		<p>columns には unit を一緒につけます。</p>
-		<p>カラム columns-1of3</p>
+<div class="cols unit">
+	<div class="cols-col cols-w33per"><div class="cols-pad">
+		<p>cols には unit を一緒につけます。</p>
+		<p>カラム cols-w33per</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
-	</div>
-	<div class="columns-col columns-1of3">
-		<p>columns には unit を一緒につけます。</p>
-		<p>カラム columns-1of3</p>
+	</div></div>
+	<div class="cols-col cols-w33per"><div class="cols-pad">
+		<p>cols には unit を一緒につけます。</p>
+		<p>カラム cols-w33per</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
-	</div>
-	<div class="columns-col columns-1of3 columns-last">
-		<p>最後のカラムには、<code>.columns-last</code> を併記します。</p>
-		<p>カラム columns-1of3</p>
-		<p>.columns-last は古いIE対策。IE9以降は不要？。</p>
-	</div>
-</div><!-- / .columns -->
+	</div></div>
+	<div class="cols-col cols-w33per cols-last"><div class="cols-pad">
+		<p>最後のカラムには、<code>.cols-last</code> を併記します。</p>
+		<p>カラム cols-w33per</p>
+		<p>.cols-last は古いIE対策。IE9以降は不要？。</p>
+	</div></div>
+</div><!-- / .cols -->
 
 <h3>4分割</h3>
-<div class="columns unit">
-	<div class="columns-col columns-1of4">
-		<p>columns には unit を一緒につけます。</p>
-		<p>カラム columns-1of4</p>
+<div class="cols unit">
+	<div class="cols-col cols-w25per"><div class="cols-pad">
+		<p>cols には unit を一緒につけます。</p>
+		<p>カラム cols-w25per</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
-	</div>
-	<div class="columns-col columns-1of4">
-		<p>columns には unit を一緒につけます。</p>
-		<p>カラム columns-1of4</p>
-		<p>カラム</p>
-		<p>カラム</p>
-		<p>カラム</p>
-		<p>カラム</p>
-		<p>カラム</p>
-	</div>
-	<div class="columns-col columns-1of4">
-		<p>columns には unit を一緒につけます。</p>
-		<p>カラム columns-1of4</p>
+	</div></div>
+	<div class="cols-col cols-w25per"><div class="cols-pad">
+		<p>cols には unit を一緒につけます。</p>
+		<p>カラム cols-w25per</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
 		<p>カラム</p>
-	</div>
-	<div class="columns-col columns-1of4 columns-last">
-		<p>カラム columns-1of4</p>
-		<p>最後のカラムには、<code>.columns-last</code> を併記します。</p>
-		<p>.columns-last は古いIE対策。IE9以降は不要？。</p>
-	</div>
-</div><!-- / .columns -->
+	</div></div>
+	<div class="cols-col cols-w25per"><div class="cols-pad">
+		<p>cols には unit を一緒につけます。</p>
+		<p>カラム cols-w25per</p>
+		<p>カラム</p>
+		<p>カラム</p>
+		<p>カラム</p>
+		<p>カラム</p>
+		<p>カラム</p>
+	</div></div>
+	<div class="cols-col cols-w25per cols-last"><div class="cols-pad">
+		<p>カラム cols-w25per</p>
+		<p>最後のカラムには、<code>.cols-last</code> を併記します。</p>
+		<p>.cols-last は古いIE対策。IE9以降は不要？。</p>
+	</div></div>
+</div><!-- / .cols -->
 
 <h3>変則4分割</h3>
-<div class="columns unit">
-	<div class="columns-col columns-3of4">
-		<p>columns には unit を一緒につけます。columns には unit を一緒につけます。columns には unit を一緒につけます。columns には unit を一緒につけます。columns には unit を一緒につけます。columns には unit を一緒につけます。columns には unit を一緒につけます。columns には unit を一緒につけます。</p>
-		<p>カラム columns-3of4</p>
+<div class="cols unit">
+	<div class="cols-col cols-w75per"><div class="cols-pad">
+		<p>cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。cols には unit を一緒につけます。</p>
+		<p>カラム cols-w75per</p>
 		<p>カラム</p>
 		<p>カラム</p>
-	</div>
-	<div class="columns-col columns-1of4 columns-last">
-		<p>最後のカラムには、<code>.columns-last</code> を併記します。</p>
-		<p>.columns-last は古いIE対策。IE9以降は不要？。</p>
-		<p>カラム columns-1of4</p>
-	</div>
-</div><!-- / .columns -->
+	</div></div>
+	<div class="cols-col cols-w25per cols-last"><div class="cols-pad">
+		<p>最後のカラムには、<code>.cols-last</code> を併記します。</p>
+		<p>.cols-last は古いIE対策。IE9以降は不要？。</p>
+		<p>カラム cols-w25per</p>
+	</div></div>
+</div><!-- / .cols -->
 
 <h3>変則4分割</h3>
-<div class="columns unit">
-	<div class="columns-col columns-1of4">
+<div class="cols unit">
+	<div class="cols-col cols-w25per"><div class="cols-pad">
 		<p>カラム</p>
-		<p>カラム columns-1of4</p>
-	</div>
-	<div class="columns-col columns-1of2">
-		<p>columns には unit を一緒につけます。</p>
-		<p>カラム columns-1of2</p>
-		<p>カラム</p>
-		<p>カラム</p>
+		<p>カラム cols-w25per</p>
+	</div></div>
+	<div class="cols-col cols-w50per"><div class="cols-pad">
+		<p>cols には unit を一緒につけます。</p>
+		<p>カラム cols-w50per</p>
 		<p>カラム</p>
 		<p>カラム</p>
-	</div>
-	<div class="columns-col columns-1of4 columns-last">
-		<p>カラム columns-1of4</p>
 		<p>カラム</p>
-		<p>.columns-last は古いIE対策。IE9以降は不要？。</p>
-	</div>
-</div><!-- / .columns -->
+		<p>カラム</p>
+	</div></div>
+	<div class="cols-col cols-w25per cols-last"><div class="cols-pad">
+		<p>カラム cols-w25per</p>
+		<p>カラム</p>
+		<p>.cols-last は古いIE対策。IE9以降は不要？。</p>
+	</div></div>
+</div><!-- / .cols -->
 
 
 
