_FW/styles/finalizer.php を追加。 - finalizer.php が利用している PxXMLDomParser.php も追加。 - htdocs/test/html.html に、DOM置換のテスト用データを追記。

--- a/htdocs/test/html.html
+++ b/htdocs/test/html.html
@@ -19,3 +19,17 @@
 <ul>
 <li><?php print t::h( $_SERVER['HTTP_USER_AGENT'] ); ?></li>
 </ul>
+
+
+<h2>h2見出しサンプル(プレーン)</h2>
+<p>テスト用コード</p>
+
+<h2>h2見出しサンプル<span class="small">(span入り)</span></h2>
+<p>テスト用コード</p>
+
+<h2 class="cont_finalize_sample">h2見出しサンプル(クラス付き)</h2>
+<p>テスト用コード</p>
+
+<h2 class="cont_finalize_sample" style="color:#ff0000;">h2見出しサンプル(クラス＆スタイル属性付き)</h2>
+<p>テスト用コード</p>
+
