リンク先の取り扱いについて数点の修正。 - $site->bind_dynamic_path_param() は、無名のパラメータもバインドするように変更。(明示的に呼ばれるメソッドのため) - $theme->href() がリンク先を解釈する際に、サイトマップのデータからリセットしていたが、これを廃止。呼び出し側で解決済みのパスを受け取る前提とする。 - $theme->mk_link() が、ラベルを特定できなかった場合に、href値をラベルとして使用するようにした。

--- a/htdocs/test/index.html
+++ b/htdocs/test/index.html
@@ -7,5 +7,10 @@
 	<li><a href="./nopage.html">./nopage.html</a></li>
 	<li><a href="./dynamic/1/a/b.html">./dynamic/1/a/b.html</a></li>
 	<li><a href="./user_test.html">./user_test.html</a></li>
+	<li><?php print $px->theme()->mk_link('./index.html'); ?></li>
 </ul>
+
+
+
+
 
