&$hoge がシンタックスエラーになるため、 $hoge に置換。 - MAMP環境でシンタックスエラーになった模様。XAMPPでは動くのに・・・。 - 詳細は分からないが、PHP5なので、問題ないと判断。

--- a/htdocs/test/user_test.html
+++ b/htdocs/test/user_test.html
@@ -9,7 +9,7 @@
 	$path_resource_dir = $px->get_local_resource_dir();
 	$realpath_resource_dir = $px->get_local_resource_dir_realpath();
 	require_once( $realpath_resource_dir.'exec.php' );
-	$cont_exec = new cont_exec(&$px);
+	$cont_exec = new cont_exec($px);
 
 	print $cont_exec->execute();
 ?>
