--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -63,7 +63,7 @@
 </div><!-- /.column2 -->
 </div><!-- /.middle -->
 <div class="footer">
-	<div class="right small">[<a href="#pagetop">ページの先頭へ戻る</a>]</div>
+	<div class="right small">[<a href="#pagetop" class="up">ページの先頭へ戻る</a>]</div>
 	<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
 	<div class="center">[<?php print $px->theme()->mk_link('/'); ?>]</div>
 </div><!-- /.footer -->
